--- a/src/index.html
+++ b/src/index.html
@@ -17,22 +17,28 @@
   <!-- --HEADER -->
   <header>
     <div class="header">
-      <a href="" class="header_logo"></a>
-      <a href="" class="header_menu"><img class="header_menu_img" src="./i/img/menu.png" alt="menu"></a>
-      <div class="header_text-logo">Møre og Romsdal</div>
-      <div class="header_contacts">
-        <div class="header_contacts_text">Vi jobbar utan helgar og ferie!</div>
-        <div class="header_contacts_phone">+47 967 52 008</div>
+      <div class="header_menu-block"><a href="#" class="header_logo"><img class="header_logo_img" src="./i/img/logo.jpg"
+            alt="logo"></a>
+        <a href="" class="header_menu"><img class="header_menu_img" src="./i/img/menu.png" alt="menu"></a>
+        <div class="header_text-logo">Møre og Romsdal</div>
       </div>
-      <ul class="header_sosial-media">
-        <li class="header_sosial-media_inst"><a class="header_sosial-media_inst_link" href="#"><img
-              class="header_sosial-media_inst_img" src="./i/img/instagram.png" alt="inst"></a></li>
+      <div class="header_right-part">
+        <div class="header_contacts">
+          <div class="header_contacts_text">Vi jobbar utan helgar og ferie!</div>
+          <div class="header_contacts_phone">+47 967 52 008</div>
+        </div>
+        <ul class="header_sosial-media">
+          <li class="header_sosial-media_inst"><a class="header_sosial-media_inst_link"
+              href="https://instagram.com/thefest.no?igshid=MzMyNGUyNmU2YQ==" target="_blank"><img
+                class="header_sosial-media_inst_img" src="./i/img/instagram.png" alt="inst"></a></li>
 
-        <li class="header_sosial-media_fb"><a class="header_sosial-media_fb__link" href="#"><img
-              class="header_sosial-media_fb_img" src="./i/img/fb.png" alt="fb"></a>
-        </li>
+          <li class="header_sosial-media_fb"><a class="header_sosial-media_fb__link"
+              href="https://www.facebook.com/groups/3081311612171554" target="_blank"><img
+                class="header_sosial-media_fb_img" src="./i/img/fb.png" alt="fb"></a>
+          </li>
 
-      </ul>
+        </ul>
+      </div>
 
     </div>
 
