--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,7 @@
       <div class="header_menu-block"><a href="#" class="header_logo"><img class="header_logo_img" src="./i/img/logo.jpg"
             alt="logo"></a>
         <a href="" class="header_menu"><img class="header_menu_img" src="./i/img/menu.png" alt="menu"></a>
-        <div class="header_text-logo">Møre og Romsdal</div>
+        <div class="header_text-logo">Arrangement for barna i Møre og Romsdal</div>
       </div>
       <div class="header_right-part">
         <div class="header_contacts">
@@ -43,6 +43,17 @@
     </div>
 
   </header>
+
+  <!-- --BANNER -->
+  <div class="banner">
+    <div class="banner_main">
+      <h1 class="banner_title">Arrangement for barn</h1>
+      <a class="banner_button" href="#">Ta kontakt med oss</a>
+      <p class="banner_text">Gi det til barnet ditt uforglemmelige følelser</p>
+    </div>
+    <img class="banner_img" src="./i/img/banner-heart.png" alt="banner-heart">
+  </div>
+
 
   <!-- 
   <header class="header-container" id="header-container">
