--- a/src/index.html
+++ b/src/index.html
@@ -17,8 +17,8 @@
   <!-- --HEADER -->
   <header>
     <div class="header">
-      <div class="header_menu-block"><a href="#" class="header_logo"><img class="header_logo_img" src="./i/img/logo.jpg"
-            alt="logo"></a>
+      <div class="header_menu-block"><a href="#" class="header_logo"><img class="header_logo_img"
+            src="./i/img/logo-removebg.png" alt="logo"></a>
         <a href="" class="header_menu"><img class="header_menu_img" src="./i/img/menu.png" alt="menu"></a>
         <div class="header_text-logo">Arrangement for barna i Møre og Romsdal</div>
       </div>
@@ -51,7 +51,7 @@
       <a class="banner_button" href="#">Ta kontakt med oss</a>
       <p class="banner_text">Gi det til barnet ditt uforglemmelige følelser</p>
     </div>
-    <img class="banner_img" src="./i/img/banner-heart.png" alt="banner-heart">
+    <img class="banner_img" src="./i/img/banner.jpg" alt="banner-heart">
   </div>
 
 
