--- a/src/index.html
+++ b/src/index.html
@@ -48,10 +48,11 @@
   <div class="banner">
     <div class="banner_main">
       <h1 class="banner_title">Arrangement for barn</h1>
-      <a class="banner_button" href="#">Ta kontakt med oss</a>
       <p class="banner_text">Gi det til barnet ditt uforglemmelige følelser</p>
+      <a class="banner_button" href="#">Ta kontakt med oss</a>
+
     </div>
-    <img class="banner_img" src="./i/img/banner.jpg" alt="banner-heart">
+    <img class="banner_img" src="./i/img/banner-frame.png" alt="banner-heart">
   </div>
 
 
