--- a/src/index.html
+++ b/src/index.html
@@ -52,7 +52,7 @@
       <a class="banner_button" href="#">Ta kontakt med oss</a>
 
     </div>
-    <img class="banner_img" src="./i/img/banner-frame.png" alt="banner-heart">
+    <img class="banner_img" src="./i/img/anim.png" alt="banner-heart">
   </div>
 
 
