--- a/src/index.html
+++ b/src/index.html
@@ -52,7 +52,9 @@
       <a class="banner_button" href="#">Ta kontakt med oss</a>
 
     </div>
-    <div class="banner_img-block"><img class="banner_img" src="./i/img/anim.png" alt="banner-heart"></div>
+    <div class="banner_img-block"><img class="banner_img" src="./i/img/for-banner-removebg.png" alt="banner-img">
+
+    </div>
   </div>
 
 
