--- a/src/index.html
+++ b/src/index.html
@@ -57,6 +57,11 @@
     </div>
   </div>
 
+  <!-- --TITLE -->
+  <div class="title-div">
+    <h1 class="title-div_text">Vi lager barnafestar som barn vil huske for alltid</h1>
+  </div>
+
 
   <!-- 
   <header class="header-container" id="header-container">
