--- a/src/index.html
+++ b/src/index.html
@@ -59,7 +59,7 @@
 
   <!-- --TITLE -->
   <div class="title-div">
-
+    <img class="title-div_motor" src="./i/img/motor.png" alt="motor">
     <h1 class="title-div_text">Vi lager barnafestar som barn vil huske for alltid</h1>
   </div>
 
