--- a/src/index.html
+++ b/src/index.html
@@ -60,14 +60,16 @@
   <!-- --TITLE -->
   <div class="title-div">
     <div class="title-div_motor"><img class="title-div_motor_img" src="./i/img/motor.png" alt="motor"></div>
-    <h1 class="title-div_text">Vi lager barnafestar som barn vil huske for alltid</h1>
-    <div class="title-div_list">
-      <ul class="title-div_list_ul">
-        <li class="title-div_item title-div_item_1">Innbetaling <br> Vipps <br> Faktura <br> Penger</li>
-        <li class="title-div_item title-div_item_2">Nye populære<br>kostumer</li>
-        <li class="title-div_item title-div_item_3">Individuelle scenarier <br> for ferien</li>
-        <li class="title-div_item title-div_item_4">Bursdagfest <br> Parti <br> Festival <br> Butikkannonserring</li>
-      </ul>
+    <div class="div-for1200">
+      <h1 class="title-div_text">Vi lager barnafestar som barn vil huske for alltid</h1>
+      <div class="title-div_list">
+        <ul class="title-div_list_ul">
+          <li class="title-div_item title-div_item_1">Innbetaling <br> Vipps <br> Faktura <br> Penger</li>
+          <li class="title-div_item title-div_item_2">Nye populære<br>kostumer</li>
+          <li class="title-div_item title-div_item_3">Individuelle scenarier <br> for ferien</li>
+          <li class="title-div_item title-div_item_4">Bursdagfest <br> Parti <br> Festival <br> Butikkannonserring</li>
+        </ul>
+      </div>
     </div>
   </div>
 
