--- a/src/index.html
+++ b/src/index.html
@@ -59,7 +59,9 @@
 
   <!-- --TITLE -->
   <div class="title-div">
-    <div class="title-div_motor"><img class="title-div_motor_img" src="./i/img/motor.png" alt="motor"></div>
+    <div class="title-div_motor"><img class="title-div_motor_img" src="./i/img/motor.png" alt="motor">
+      <a class="title-div_motor_button" href="#">Vise video</a>
+    </div>
     <div class="div-for1200">
       <h1 class="title-div_text">Vi lager barnafestar som barn vil huske for alltid</h1>
       <div class="title-div_list">
