--- a/src/index.html
+++ b/src/index.html
@@ -47,7 +47,7 @@
   <!-- --BANNER -->
   <div class="banner">
     <div class="banner_main">
-      <h1 class="banner_title">Arrangement for barn</h1>
+      <h2 class="banner_title">Arrangement for barn</h2>
       <p class="banner_text">Gi det til barnet ditt uforglemmelige følelser</p>
       <a class="banner_button" href="#">Ta kontakt med oss</a>
 
@@ -73,6 +73,62 @@
         </ul>
       </div>
     </div>
+  </div>
+
+  <!-- --HEROES -->
+  <div class="heroes">
+    <div class="heroes_title">
+      <h2 class="heroes_title_name">Organisering av barneselskap, bursdager og andre morsomme arrangement. <br>Eventbrå
+        med
+        egne rekvisitter!</h2>
+      <p class="heroes_title_text1">Barna er glade, foreldra slapper av</p>
+    </div>
+
+    <div class="heroes_grid">
+      <div class="heroes_grid_block heroes_grid_block_1">
+        <h3 class="heroes_grid_block_heroes">Roblox</h3>
+        <img class="heroes_grid_block_img" src="./i/img/ex.png" alt="ex">
+        <a class="heroes_grid_block_btn" href="#">Mer informasjon</a>
+      </div>
+
+      <div class="heroes_grid_block heroes_grid_block_2">
+        <h3 class="heroes_grid_block_heroes">PAV patrul</h3>
+        <img class="heroes_grid_block_img" src="./i/img/ex.png" alt="ex">
+        <a class="heroes_grid_block_btn" href="#">Mer informasjon</a>
+      </div>
+
+      <div class="heroes_grid_block">
+        <h3 class="heroes_grid_block_heroes">Pirater</h3>
+        <img class="heroes_grid_block_img" src="./i/img/ex.png" alt="ex">
+        <a class="heroes_grid_block_btn" href="#">Mer informasjon</a>
+      </div>
+
+      <div class="heroes_grid_block">
+        <h3 class="heroes_grid_block_heroes">Enhjørnong</h3>
+        <img class="heroes_grid_block_img" src="./i/img/ex.png" alt="ex">
+        <a class="heroes_grid_block_btn" href="#">Mer informasjon</a>
+      </div>
+
+      <div class="heroes_grid_block">
+        <h3 class="heroes_grid_block_heroes">Marvel</h3>
+        <img class="heroes_grid_block_img" src="./i/img/ex.png" alt="ex">
+        <a class="heroes_grid_block_btn" href="#">Mer informasjon</a>
+      </div>
+
+      <div class="heroes_grid_block">
+        <h3 class="heroes_grid_block_heroes">Addams familien</h3>
+        <img class="heroes_grid_block_img" src="./i/img/ex.png" alt="ex">
+        <a class="heroes_grid_block_btn" href="#">Mer informasjon</a>
+      </div>
+      <div class="heroes_grid_block">
+        <h3 class="heroes_grid_block_heroes">Disney</h3>
+        <img class="heroes_grid_block_img" src="./i/img/ex.png" alt="ex">
+        <a class="heroes_grid_block_btn" href="#">Mer informasjon</a>
+      </div>
+    </div>
+
+
+
   </div>
 
 
