--- a/src/index.html
+++ b/src/index.html
@@ -97,30 +97,30 @@
         <a class="heroes_grid_block_btn" href="#">Mer informasjon</a>
       </div>
 
-      <div class="heroes_grid_block">
+      <div class="heroes_grid_block heroes_grid_block_3">
         <h3 class="heroes_grid_block_heroes">Pirater</h3>
         <img class="heroes_grid_block_img" src="./i/img/ex.png" alt="ex">
         <a class="heroes_grid_block_btn" href="#">Mer informasjon</a>
       </div>
 
-      <div class="heroes_grid_block">
+      <div class="heroes_grid_block heroes_grid_block_4">
         <h3 class="heroes_grid_block_heroes">Enhjørnong</h3>
         <img class="heroes_grid_block_img" src="./i/img/ex.png" alt="ex">
         <a class="heroes_grid_block_btn" href="#">Mer informasjon</a>
       </div>
 
-      <div class="heroes_grid_block">
+      <div class="heroes_grid_block heroes_grid_block_5">
         <h3 class="heroes_grid_block_heroes">Marvel</h3>
         <img class="heroes_grid_block_img" src="./i/img/ex.png" alt="ex">
         <a class="heroes_grid_block_btn" href="#">Mer informasjon</a>
       </div>
 
-      <div class="heroes_grid_block">
+      <div class="heroes_grid_block heroes_grid_block_6">
         <h3 class="heroes_grid_block_heroes">Addams familien</h3>
         <img class="heroes_grid_block_img" src="./i/img/ex.png" alt="ex">
         <a class="heroes_grid_block_btn" href="#">Mer informasjon</a>
       </div>
-      <div class="heroes_grid_block">
+      <div class="heroes_grid_block heroes_grid_block_7">
         <h3 class="heroes_grid_block_heroes">Disney</h3>
         <img class="heroes_grid_block_img" src="./i/img/ex.png" alt="ex">
         <a class="heroes_grid_block_btn" href="#">Mer informasjon</a>
@@ -186,188 +186,188 @@
   <!-- --NAV -->
 
 
-  <div class="nav" id="nav">
-    <section class="nav-container">
+  <!-- <div class="nav" id="nav"> -->
+  <!-- <section class="nav-container">
       <a class="nav-container__logo" href="#"><img src="./i/img/logo_buba_2x.png" alt="Logo"
           class="nav-container__logo__img"></a>
 
-      <!-- -Menu button -->
-      <div id="menu-button-container">
-        <a href="#"><svg id="menu-button" class="nav-container__menu" xmlns="http://www.w3.org/2000/svg"
-            viewBox='0 0 490.667 490.667' width="28" height="28">
-            <use id="menu-burger" xlink: href="i/sprite.svg#menu-burger"> </use>
-          </svg>
-        </a>
-        <a href="#"><svg id="close-button" class="nav-container__menu none" xmlns="http://www.w3.org/2000/svg"
-            viewBox='0 0 24 24' width="28" height="28">
-            <use id="close" xlink: href="i/sprite.svg#close"> </use>
-          </svg>
-        </a>
-      </div>
+      -Menu button
+  <div id="menu-button-container">
+    <a href="#"><svg id="menu-button" class="nav-container__menu" xmlns="http://www.w3.org/2000/svg"
+        viewBox='0 0 490.667 490.667' width="28" height="28">
+        <use id="menu-burger" xlink: href="i/sprite.svg#menu-burger"> </use>
+      </svg>
+    </a>
+    <a href="#"><svg id="close-button" class="nav-container__menu none" xmlns="http://www.w3.org/2000/svg"
+        viewBox='0 0 24 24' width="28" height="28">
+        <use id="close" xlink: href="i/sprite.svg#close"> </use>
+      </svg>
+    </a>
+  </div>
 
 
-      <ul class="nav-container__nav">
-        <li class="nav-container__nav__item nav-container__nav__item_current">Home <svg
-            class="nav-container__nav__item__point point point_current" xmlns="http://www.w3.org/2000/svg"
-            viewBox='0 0 200 200' width="6" height="6">
-            <use xlink: href="i/sprite.svg#point"></use>
-          </svg>
-          <!-- -Home -->
-          <ul class="nav__desctop-list">
-            <li class="nav__desctop-list__item nav__desctop-list__item_current">Kindergarten</li>
-            <li class="nav__desctop-list__item">Preschool</li>
-            <li class="nav__desctop-list__item">Private Nanny</li>
-            <li class="nav__desctop-list__item">Education Agency</li>
-          </ul>
-        </li>
+  <ul class="nav-container__nav">
+    <li class="nav-container__nav__item nav-container__nav__item_current">Home <svg
+        class="nav-container__nav__item__point point point_current" xmlns="http://www.w3.org/2000/svg"
+        viewBox='0 0 200 200' width="6" height="6">
+        <use xlink: href="i/sprite.svg#point"></use>
+      </svg>
+      <!-- -Home -->
+  <!-- <ul class="nav__desctop-list">
+    <li class="nav__desctop-list__item nav__desctop-list__item_current">Kindergarten</li>
+    <li class="nav__desctop-list__item">Preschool</li>
+    <li class="nav__desctop-list__item">Private Nanny</li>
+    <li class="nav__desctop-list__item">Education Agency</li>
+  </ul>
+  </li> -->
 
 
-        <li class="nav-container__nav__item">About Us <svg class="nav-container__nav__item__point point"
-            xmlns="http://www.w3.org/2000/svg" viewBox='0 0 200 200' width="6" height="6">
-            <use xlink: href="i/sprite.svg#point"></use>
-          </svg>
+  <!-- <li class="nav-container__nav__item">About Us <svg class="nav-container__nav__item__point point"
+      xmlns="http://www.w3.org/2000/svg" viewBox='0 0 200 200' width="6" height="6">
+      <use xlink: href="i/sprite.svg#point"></use>
+    </svg> -->
 
-          <!-- -About -->
-          <ul class="nav__desctop-list">
-            <li class="nav__desctop-list__item nav__desctop-list__item__sub no-sublist">About Us</li>
-            <li class="nav__desctop-list__item nav__desctop-list__item__sub no-sublist">Testimonials</li>
-            <li class="nav__desctop-list__item nav__desctop-list__item__sub no-sublist">FAQ</li>
-            <li class="nav__desctop-list__item nav__desctop-list__item__sub second-sublist">Gallery<span
-                class="nav__desctop-list__item_arrow">&#62;</span>
+  <!-- -About -->
+  <!-- <ul class="nav__desctop-list">
+      <li class="nav__desctop-list__item nav__desctop-list__item__sub no-sublist">About Us</li>
+      <li class="nav__desctop-list__item nav__desctop-list__item__sub no-sublist">Testimonials</li>
+      <li class="nav__desctop-list__item nav__desctop-list__item__sub no-sublist">FAQ</li>
+      <li class="nav__desctop-list__item nav__desctop-list__item__sub second-sublist">Gallery<span
+          class="nav__desctop-list__item_arrow">&#62;</span> -->
 
-              <!-- -About-gallery -->
-              <ul class="nav__desctop-list">
-                <li class="nav__desctop-list__item">
-                  Gallery 2-columns
-                </li>
-                <li class="nav__desctop-list__item">
-                  Gallery 3-columns
-                </li>
-                <li class="nav__desctop-list__item">
-                  Gallery 4-columns
-                </li>
-              </ul>
-            </li>
-
-
-        </li>
-
-        <li class="nav__desctop-list__item nav__desctop-list__item__sub no-sublist">404 Page</li>
-      </ul>
-
-
-
-
-      <li class="nav-container__nav__item">Products <svg class="nav-container__nav__item__point point"
-          xmlns="http://www.w3.org/2000/svg" viewBox='0 0 200 200' width="6" height="6">
-          <use xlink: href="i/sprite.svg#point"></use>
-        </svg>
-
-        <!-- -Products -->
-        <ul class="nav__desctop-list">
-          <li class="nav__desctop-list__item">Show</li>
-          <li class="nav__desctop-list__item">Wishlist</li>
-          <li class="nav__desctop-list__item">Cart</li>
-          <li class="nav__desctop-list__item">Checkout</li>
-          <li class="nav__desctop-list__item">My account</li>
-        </ul>
-      </li>
-
-
-      <li class="nav-container__nav__item">Blog <svg class="nav-container__nav__item__point point"
-          xmlns="http://www.w3.org/2000/svg" viewBox='0 0 200 200' width="6" height="6">
-          <use xlink: href="i/sprite.svg#point"></use>
-        </svg>
-
-        <!-- -Blog -->
-        <ul class="nav__desctop-list">
-          <li class="nav__desctop-list__item">Blog with Sidebar</li>
-          <li class="nav__desctop-list__item">Blog without Sidebar</li>
-        </ul>
-      </li>
-
-
-      <li class="nav-container__nav__item">Contacts</li>
-      </ul>
-
-
-
-
-      <section class="nav-container__btn-section">
-        <button class="nav-container__btn-section__btn">Book a visit <img class="nav-container__btn-section__btn__arrow"
-            src="./i/img/right-arrow-white.png" alt="arrow"></button>
-
-
-      </section>
-    </section>
-
-
-    <!-- -OPENED NAV (mobile)-->
-    <div id="menu-container-mobile" class="nav__mobile__hidden-block nav__mobile__hidden-block_container active">
-
-      <ul class="nav__mobile__hidden-list">
-
-        <!-- Home -->
-        <li class="nav__mobile__hidden-list__item nav__mobile__hidden-list__item_main first-list ">Home<span
-            class="nav__mobile__hidden-list__item_arrow">+</span></li>
-        <ul class="nav__mobile__hidden-list nav__mobile__hidden-list__sublist none">
-          <li class="nav__mobile__hidden-list__item">Kindergarten</li>
-          <li class="nav__mobile__hidden-list__item">Preschool</li>
-          <li class="nav__mobile__hidden-list__item">Private Nanny</li>
-          <li class="nav__mobile__hidden-list__item">Education Agency</li>
-        </ul>
-
-        <!-- About us -->
-        <li class="nav__mobile__hidden-list__item nav__mobile__hidden-list__item_main first-list ">About Us<span
-            class="nav__mobile__hidden-list__item_arrow" id="about-arrow">+</span></li>
-        <ul class="nav__mobile__hidden-list nav__mobile__hidden-list__sublist none">
-          <li class="nav__mobile__hidden-list__item">About Us</li>
-          <li class="nav__mobile__hidden-list__item">Testimonials</li>
-          <li class="nav__mobile__hidden-list__item">FAQ</li>
-
-          <!-- About us - Gallery -->
-          <li class="nav__mobile__hidden-list__item">Gallery<span id="about-gallery-arrow"
-              class="nav__mobile__hidden-list__item_arrow">+</span>
+  <!-- -About-gallery -->
+  <!-- <ul class="nav__desctop-list">
+          <li class="nav__desctop-list__item">
+            Gallery 2-columns
           </li>
-          <ul id="about-gallery-sublist"
-            class="nav__mobile__hidden-list nav__mobile__hidden-list__sublist nav__mobile__hidden-list__sublist_gallery none">
-            <li class="nav__mobile__hidden-list__item">
-              Gallery 2-columns
-            </li>
-            <li class="nav__mobile__hidden-list__item">
-              Gallery 3-columns
-            </li>
-            <li class="nav__mobile__hidden-list__item">
-              Gallery 4-columns
-            </li>
-          </ul>
-          <li class="nav__mobile__hidden-list__item">404 Page</li>
+          <li class="nav__desctop-list__item">
+            Gallery 3-columns
+          </li>
+          <li class="nav__desctop-list__item">
+            Gallery 4-columns
+          </li>
         </ul>
-
-        <!-- Products -->
-        <li class="nav__mobile__hidden-list__item nav__mobile__hidden-list__item_main first-list ">Products<span
-            class="nav__mobile__hidden-list__item_arrow">+</span></li>
-        <ul class="nav__mobile__hidden-list nav__mobile__hidden-list__sublist none">
-          <li class="nav__mobile__hidden-list__item">Shop</li>
-          <li class="nav__mobile__hidden-list__item">Wishlist</li>
-          <li class="nav__mobile__hidden-list__item">Cart</li>
-          <li class="nav__mobile__hidden-list__item">Checkout</li>
-          <li class="nav__mobile__hidden-list__item">My account</li>
-        </ul>
+      </li>
 
 
-        <!-- Blog -->
-        <li class="nav__mobile__hidden-list__item nav__mobile__hidden-list__item_main first-list ">Blog<span
-            class="nav__mobile__hidden-list__item_arrow">+</span></li>
-        <ul class="nav__mobile__hidden-list nav__mobile__hidden-list__sublist none">
-          <li class="nav__mobile__hidden-list__item">Blog with Sidebar</li>
-          <li class="nav__mobile__hidden-list__item">Blog without Sidebar</li>
-        </ul>
+  </li>
 
-        <!-- Contacts -->
-        <li class="nav__mobile__hidden-list__item nav__mobile__hidden-list__item_main">Contacts</li>
+  <li class="nav__desctop-list__item nav__desctop-list__item__sub no-sublist">404 Page</li>
+  </ul>
+
+
+
+
+  <li class="nav-container__nav__item">Products <svg class="nav-container__nav__item__point point"
+      xmlns="http://www.w3.org/2000/svg" viewBox='0 0 200 200' width="6" height="6">
+      <use xlink: href="i/sprite.svg#point"></use>
+    </svg> -->
+
+  <!-- -Products -->
+  <!-- <ul class="nav__desctop-list">
+      <li class="nav__desctop-list__item">Show</li>
+      <li class="nav__desctop-list__item">Wishlist</li>
+      <li class="nav__desctop-list__item">Cart</li>
+      <li class="nav__desctop-list__item">Checkout</li>
+      <li class="nav__desctop-list__item">My account</li>
+    </ul>
+  </li>
+
+
+  <li class="nav-container__nav__item">Blog <svg class="nav-container__nav__item__point point"
+      xmlns="http://www.w3.org/2000/svg" viewBox='0 0 200 200' width="6" height="6">
+      <use xlink: href="i/sprite.svg#point"></use>
+    </svg> -->
+
+  <!-- -Blog -->
+  <!-- <ul class="nav__desctop-list">
+      <li class="nav__desctop-list__item">Blog with Sidebar</li>
+      <li class="nav__desctop-list__item">Blog without Sidebar</li>
+    </ul>
+  </li>
+
+
+  <li class="nav-container__nav__item">Contacts</li>
+  </ul>
+
+
+
+
+  <section class="nav-container__btn-section">
+    <button class="nav-container__btn-section__btn">Book a visit <img class="nav-container__btn-section__btn__arrow"
+        src="./i/img/right-arrow-white.png" alt="arrow"></button>
+
+
+  </section>
+  </section> --> -->
+
+
+  <!-- -OPENED NAV (mobile)-->
+  <div id="menu-container-mobile" class="nav__mobile__hidden-block nav__mobile__hidden-block_container active">
+
+    <ul class="nav__mobile__hidden-list">
+
+      <!-- Home -->
+      <li class="nav__mobile__hidden-list__item nav__mobile__hidden-list__item_main first-list ">Home<span
+          class="nav__mobile__hidden-list__item_arrow">+</span></li>
+      <ul class="nav__mobile__hidden-list nav__mobile__hidden-list__sublist none">
+        <li class="nav__mobile__hidden-list__item">Kindergarten</li>
+        <li class="nav__mobile__hidden-list__item">Preschool</li>
+        <li class="nav__mobile__hidden-list__item">Private Nanny</li>
+        <li class="nav__mobile__hidden-list__item">Education Agency</li>
       </ul>
-    </div>
+
+      <!-- About us -->
+      <li class="nav__mobile__hidden-list__item nav__mobile__hidden-list__item_main first-list ">About Us<span
+          class="nav__mobile__hidden-list__item_arrow" id="about-arrow">+</span></li>
+      <ul class="nav__mobile__hidden-list nav__mobile__hidden-list__sublist none">
+        <li class="nav__mobile__hidden-list__item">About Us</li>
+        <li class="nav__mobile__hidden-list__item">Testimonials</li>
+        <li class="nav__mobile__hidden-list__item">FAQ</li>
+
+        <!-- About us - Gallery -->
+        <li class="nav__mobile__hidden-list__item">Gallery<span id="about-gallery-arrow"
+            class="nav__mobile__hidden-list__item_arrow">+</span>
+        </li>
+        <ul id="about-gallery-sublist"
+          class="nav__mobile__hidden-list nav__mobile__hidden-list__sublist nav__mobile__hidden-list__sublist_gallery none">
+          <li class="nav__mobile__hidden-list__item">
+            Gallery 2-columns
+          </li>
+          <li class="nav__mobile__hidden-list__item">
+            Gallery 3-columns
+          </li>
+          <li class="nav__mobile__hidden-list__item">
+            Gallery 4-columns
+          </li>
+        </ul>
+        <li class="nav__mobile__hidden-list__item">404 Page</li>
+      </ul>
+
+      <!-- Products -->
+      <li class="nav__mobile__hidden-list__item nav__mobile__hidden-list__item_main first-list ">Products<span
+          class="nav__mobile__hidden-list__item_arrow">+</span></li>
+      <ul class="nav__mobile__hidden-list nav__mobile__hidden-list__sublist none">
+        <li class="nav__mobile__hidden-list__item">Shop</li>
+        <li class="nav__mobile__hidden-list__item">Wishlist</li>
+        <li class="nav__mobile__hidden-list__item">Cart</li>
+        <li class="nav__mobile__hidden-list__item">Checkout</li>
+        <li class="nav__mobile__hidden-list__item">My account</li>
+      </ul>
+
+
+      <!-- Blog -->
+      <li class="nav__mobile__hidden-list__item nav__mobile__hidden-list__item_main first-list ">Blog<span
+          class="nav__mobile__hidden-list__item_arrow">+</span></li>
+      <ul class="nav__mobile__hidden-list nav__mobile__hidden-list__sublist none">
+        <li class="nav__mobile__hidden-list__item">Blog with Sidebar</li>
+        <li class="nav__mobile__hidden-list__item">Blog without Sidebar</li>
+      </ul>
+
+      <!-- Contacts -->
+      <li class="nav__mobile__hidden-list__item nav__mobile__hidden-list__item_main">Contacts</li>
+    </ul>
+  </div>
 
 
   </div>
