--- a/src/index.html
+++ b/src/index.html
@@ -132,6 +132,65 @@
 
   </div>
 
+  <!-- --TILLEG -->
+  <div class="tilleg">
+    <h2 class="tilleg_title">Lyse tilleg til ferien</h2>
+    <ul class="tilleg_list">
+      <li class="tilleg_list_frame">
+        <div class="tilleg_item-bg">
+          <p>Barnefest fotograf</p>
+        </div>
+        <img class="tilleg_item-img" src="./i/img/kids.jpg" alt="#">
+      </li>
+      <li class="tilleg_list_frame">
+        <div class="tilleg_item-bg tilleg_item-bg_2">
+          <p>Såpeboble</p>
+        </div>
+        <img class="tilleg_item-img" src="./i/img/kids.jpg" alt="#">
+      </li>
+      <li class="tilleg_list_frame">
+        <div class="tilleg_item-bg tilleg_item-bg_3">
+          <p>Glittertatoveringen</p>
+        </div>
+        <img class="tilleg_item-img" src="./i/img/kids.jpg" alt="#">
+      </li>
+      <li class="tilleg_list_frame">
+        <div class="tilleg_item-bg">
+          <p>Ansiktsmaling</p>
+        </div>
+        <img class="tilleg_item-img" src="./i/img/kids.jpg" alt="#">
+      </li>
+      <li class="tilleg_list_frame">
+        <div class="tilleg_item-bg tilleg_item-bg_2">
+          <p>Klistremerker for barn</p>
+        </div>
+        <img class="tilleg_item-img" src="./i/img/kids.jpg" alt="#">
+      </li>
+      <li class="tilleg_list_frame">
+        <div class="tilleg_item-bg tilleg_item-bg_3">
+          <p>Tegning med maling for minne</p>
+        </div>
+        <img class="tilleg_item-img" src="./i/img/kids.jpg" alt="#">
+      </li>
+      <li class="tilleg_list_frame">
+        <div class="tilleg_item-bg">
+          <p>Barnefrisør</p>
+        </div>
+        <img class="tilleg_item-img" src="./i/img/kids.jpg" alt="#">
+      </li>
+      <li class="tilleg_list_frame">
+        <div class="tilleg_item-bg tilleg_item-bg_2">
+          <p>Tilbehør</p>
+        </div>
+        <img class="tilleg_item-img" src="./i/img/kids.jpg" alt="#">
+      </li>
+    </ul>
+
+
+
+  </div>
+
+
 
   <!-- 
   <header class="header-container" id="header-container">
