--- a/src/index.html
+++ b/src/index.html
@@ -136,55 +136,60 @@
   <div class="tilleg">
     <h2 class="tilleg_title">Lyse tilleg til ferien</h2>
     <ul class="tilleg_list">
-      <li class="tilleg_list_frame">
+      <li class="tilleg_list_frame tf">
         <div class="tilleg_item-bg">
           <p>Barnefest fotograf</p>
         </div>
         <img class="tilleg_item-img" src="./i/img/kids.jpg" alt="#">
       </li>
-      <li class="tilleg_list_frame">
+      <li class="tilleg_list_frame ts">
         <div class="tilleg_item-bg tilleg_item-bg_2">
           <p>Såpeboble</p>
         </div>
         <img class="tilleg_item-img" src="./i/img/kids.jpg" alt="#">
       </li>
-      <li class="tilleg_list_frame">
+      <li class="tilleg_list_frame tt">
         <div class="tilleg_item-bg tilleg_item-bg_3">
           <p>Glittertatoveringen</p>
         </div>
         <img class="tilleg_item-img" src="./i/img/kids.jpg" alt="#">
       </li>
-      <li class="tilleg_list_frame">
-        <div class="tilleg_item-bg">
+      <li class="tilleg_list_frame tfr">
+        <div class="tilleg_item-bg tilleg_item-bg_4">
           <p>Ansiktsmaling</p>
         </div>
         <img class="tilleg_item-img" src="./i/img/kids.jpg" alt="#">
       </li>
-      <li class="tilleg_list_frame">
-        <div class="tilleg_item-bg tilleg_item-bg_2">
+      <li class="tilleg_list_frame tfv">
+        <div class="tilleg_item-bg tilleg_item-bg_5">
           <p>Klistremerker for barn</p>
         </div>
         <img class="tilleg_item-img" src="./i/img/kids.jpg" alt="#">
       </li>
-      <li class="tilleg_list_frame">
-        <div class="tilleg_item-bg tilleg_item-bg_3">
+      <li class="tilleg_list_frame tsx">
+        <div class="tilleg_item-bg tilleg_item-bg_6">
           <p>Tegning med maling for minne</p>
         </div>
         <img class="tilleg_item-img" src="./i/img/kids.jpg" alt="#">
       </li>
-      <li class="tilleg_list_frame">
-        <div class="tilleg_item-bg">
+      <li class="tilleg_list_frame tsn">
+        <div class="tilleg_item-bg tilleg_item-bg_7">
           <p>Barnefrisør</p>
         </div>
         <img class="tilleg_item-img" src="./i/img/kids.jpg" alt="#">
       </li>
-      <li class="tilleg_list_frame">
-        <div class="tilleg_item-bg tilleg_item-bg_2">
+      <li class="tilleg_list_frame te">
+        <div class="tilleg_item-bg tilleg_item-bg_8">
           <p>Tilbehør</p>
         </div>
         <img class="tilleg_item-img" src="./i/img/kids.jpg" alt="#">
       </li>
     </ul>
+
+
+
+
+
 
 
 
