--- a/src/index.html
+++ b/src/index.html
@@ -186,15 +186,23 @@
       </li>
     </ul>
 
-
-
-
-
-
-
-
   </div>
 
+  <!-- --SHOW -->
+  <div class="show">
+    <h2 class="show_title">
+      Show for ditt arrangement
+    </h2>
+    <p class="show_txt">Vi hjelper deg med å velge det beste showet til festen din &#9733;</p>
+    <ul class="show_list">
+      <li class="show_list_block">
+        <p class="show_list_block_h">
+          Såpebobleshow
+        </p>
+        <img class="show_list_block_img" src="i/img/img-more-14.jpg" alt="såpebobleshow">
+      </li>
+    </ul>
+  </div>
 
 
   <!-- 
