--- a/src/index.html
+++ b/src/index.html
@@ -204,6 +204,23 @@
     </ul>
   </div>
 
+  <!-- --KONTAKT -->
+  <div class="kontakt">
+    <div class="kontakt_block">
+      <h2 class="kontakt_block_h1">Vil du ikke bruke mye tid på å finne ut av det?</h2>
+      <p class="kontakt_block_txt">Vi vil utvikle det perfekte alternativer for festen din!</p>
+      <a href="tel:+4796752008" class="kontakt_block_number">+47 967 52 008
+        <p class="kontakt_block_number_gratis">Gratis konsultasjon!</p>
+      </a>
+
+    </div>
+    <div class="kontakt_btn">
+      <button class="kontakt_btn_btn1 ringer">
+        Ringer</button>
+      <button class="kontakt_btn_btn2 messenger ">Messenger</button>
+    </div>
+  </div>
+
 
   <!-- 
   <header class="header-container" id="header-container">
