--- a/src/index.html
+++ b/src/index.html
@@ -189,19 +189,21 @@
   </div>
 
   <!-- --SHOW -->
-  <div class="show">
-    <h2 class="show_title">
-      Show for ditt arrangement
-    </h2>
-    <p class="show_txt">Vi hjelper deg med å velge det beste showet til festen din &#9733;</p>
-    <ul class="show_list">
-      <li class="show_list_block">
-        <p class="show_list_block_h">
-          Såpebobleshow
-        </p>
-        <img class="show_list_block_img" src="i/img/img-more-14.jpg" alt="såpebobleshow">
-      </li>
-    </ul>
+  <div class="bg">
+    <div class="show">
+      <h2 class="show_title">
+        Show for ditt arrangement
+      </h2>
+      <p class="show_txt">Vi hjelper deg med å velge det beste showet til festen din &#9733;</p>
+      <ul class="show_list">
+        <li class="show_list_block">
+          <p class="show_list_block_h">
+            Såpebobleshow
+          </p>
+          <img class="show_list_block_img" src="i/img/img-more-14.jpg" alt="såpebobleshow">
+        </li>
+      </ul>
+    </div>
   </div>
 
   <!-- --KONTAKT -->
@@ -209,7 +211,9 @@
     <div class="kontakt_block">
       <h2 class="kontakt_block_h1">Vil du ikke bruke mye tid på å finne ut av det?</h2>
       <p class="kontakt_block_txt">Vi vil utvikle det perfekte alternativer for festen din!</p>
-      <a href="tel:+4796752008" class="kontakt_block_number">+47 967 52 008
+      <a href="tel:+4796752008" class="kontakt_block_number">
+        <h2 class="second-h1">Vil du ikke bruke mye tid på å finne ut av det?</h2>
+        <p class="second-txt">Vi vil utvikle det perfekte alternativer for festen din!</p>+47 967 52 008
         <p class="kontakt_block_number_gratis">Gratis konsultasjon!</p>
       </a>
 
