--- a/src/index.html
+++ b/src/index.html
@@ -225,6 +225,105 @@
     </div>
   </div>
 
+  <!-- --PRICES -->
+  <div>
+    <ul>
+
+      <!-- Express -->
+      <li>
+        <p>Ekspress</p>
+        <p>15 min</p>
+        <ul>
+          <li>1 helten</li>
+          <li>3 ballongar</li>
+          <li>Tematisk musikk</li>
+          <li>Danse</li>
+          <li>Bilde med helten</li>
+        </ul>
+        <p>500 kr</p>
+      </li>
+
+      <!-- Standart -->
+      <li>
+        <p>Standart</p>
+        <p>1 time/ 10 barn</p>
+        <ul>
+          <li>2 heltar</li>
+          <li>Tematisk musikk</li>
+          <li>Spelar leiker/ stafettar med rekvisitter</li>
+          <li>Pakke opp gaver</li>
+          <li>Discotek med såpeboblergenerator</li>
+          <li>Bilde med heltar</li>
+        </ul>
+        <p>1350 kr</p>
+        <p>1000 kr</p>
+      </li>
+
+      <!-- Super -->
+      <li>
+        <p>Super</p>
+        <p>1 time/ 10 barn</p>
+        <ul>
+          <li>2 heltar</li>
+          <li>Ansiktmåling</li>
+          <li>Tematisk musikk</li>
+          <li>Spelar leiker/ stafettar med rekvisitter</li>
+          <li>Pakke opp gaver</li>
+          <li>Discotek med såpeboblergenerator</li>
+          <li>Ballongfigur for kvar barn</li>
+          <li>Bilde med heltar</li>
+        </ul>
+        <p>2050 kr</p>
+        <p>1500 kr</p>
+      </li>
+
+      <!-- VIP -->
+      <li>
+        <p>VIP</p>
+        <p>2 timar/ 10 barn</p>
+        <ul>
+          <li>Frisyre og ansiktsmåling til bursdagsgutten</li>
+          <li>2 heltar</li>
+          <li>Ansiktmåling</li>
+          <li>Glittertatovering</li>
+          <li>Kurs sjokoladegodteri</li>
+          <li>Tematisk musikk</li>
+          <li>Spelar leiker/ stafettar/ kvestar med rekvisitter</li>
+          <li>Discotek med såpeboblergenerator</li>
+          <li>Pinjata</li>
+          <li>Bilder med heltar</li>
+          <li>Fotosoner</li>
+          <li>Fotograf</li>
+        </ul>
+        <p>4800 kr</p>
+        <p>3000 kr</p>
+      </li>
+    </ul>
+
+    <p>Avreise - frå 200 kr</p>
+    <p>Helten kan gi kaker til barne</p>
+
+    <!-- Extra servises -->
+    <div>
+      <p>Tilleggstjeneste til Tjenestepakker - betales separat:</p>
+      <ul>
+        <li>extra barn - 50 kr</li>
+        <li>ein animatør - 400 kr</li>
+        <li>glittertatooeringer - 500 kr</li>
+        <li>ansiktmåling - 500 kr</li>
+        <li>fotograf - 500 kr</li>
+        <li>pinjata - 150 kr</li>
+        <li>fotosoner - 200 kr</li>
+        <li>såpeboblergenerator - 200 kr</li>
+        <li>ballonger frå - 250 kr</li>
+        <li>godteri for pinjata frå - 250 kr</li>
+        <li>kurs for barna frå - 500 kr</li>
+      </ul>
+    </div>
+  </div>
+
+
+
 
   <!-- 
   <header class="header-container" id="header-container">
