--- a/src/index.html
+++ b/src/index.html
@@ -226,28 +226,29 @@
   </div>
 
   <!-- --PRICES -->
-  <div>
-    <ul>
+  <div class="prices">
+    <h2 class="prices_title">Tjenestepakker</h2>
+    <ul class="prices_pack">
 
       <!-- Express -->
-      <li>
-        <p>Ekspress</p>
-        <p>15 min</p>
-        <ul>
+      <li class="prices_pack_block prices_pack_block_1">
+        <p class="prices_pack_block_title prices_pack_block_title_1">Ekspress</p>
+        <p class="prices_pack_block_time">15 min</p>
+        <ul class="prices_pack_block_listin">
           <li>1 helten</li>
           <li>3 ballongar</li>
           <li>Tematisk musikk</li>
           <li>Danse</li>
           <li>Bilde med helten</li>
         </ul>
-        <p>500 kr</p>
+        <p class="prices_pack_block_price prices_pack_block_price_1">500 kr</p>
       </li>
 
       <!-- Standart -->
-      <li>
-        <p>Standart</p>
-        <p>1 time/ 10 barn</p>
-        <ul>
+      <li class="prices_pack_block prices_pack_block_2">
+        <p class="prices_pack_block_title prices_pack_block_title_2">Standart</p>
+        <p class="prices_pack_block_time">1 time/ 10 barn</p>
+        <ul class="prices_pack_block_listin">
           <li>2 heltar</li>
           <li>Tematisk musikk</li>
           <li>Spelar leiker/ stafettar med rekvisitter</li>
@@ -255,15 +256,15 @@
           <li>Discotek med såpeboblergenerator</li>
           <li>Bilde med heltar</li>
         </ul>
-        <p>1350 kr</p>
-        <p>1000 kr</p>
+        <p class="prices_pack_block_price prices_pack_block_price_2 prices_pack_block_price_2_old">1350 kr</p>
+        <p class="prices_pack_block_price prices_pack_block_price_2">1000 kr</p>
       </li>
 
       <!-- Super -->
-      <li>
-        <p>Super</p>
-        <p>1 time/ 10 barn</p>
-        <ul>
+      <li class="prices_pack_block prices_pack_block_3">
+        <p class="prices_pack_block_title prices_pack_block_title_3">Super</p>
+        <p class="prices_pack_block_time">1 time/ 10 barn</p>
+        <ul class="prices_pack_block_listin">
           <li>2 heltar</li>
           <li>Ansiktmåling</li>
           <li>Tematisk musikk</li>
@@ -273,15 +274,15 @@
           <li>Ballongfigur for kvar barn</li>
           <li>Bilde med heltar</li>
         </ul>
-        <p>2050 kr</p>
-        <p>1500 kr</p>
+        <p class="prices_pack_block_price prices_pack_block_price_3 prices_pack_block_price_3_old">2050 kr</p>
+        <p class="prices_pack_block_price prices_pack_block_price_3 ">1500 kr</p>
       </li>
 
       <!-- VIP -->
-      <li>
-        <p>VIP</p>
-        <p>2 timar/ 10 barn</p>
-        <ul>
+      <li class="prices_pack_block prices_pack_block_4">
+        <p class="prices_pack_block_title prices_pack_block_title_4">VIP</p>
+        <p class="prices_pack_block_time">2 timar/ 10 barn</p>
+        <ul class="prices_pack_block_listin">
           <li>Frisyre og ansiktsmåling til bursdagsgutten</li>
           <li>2 heltar</li>
           <li>Ansiktmåling</li>
@@ -295,8 +296,8 @@
           <li>Fotosoner</li>
           <li>Fotograf</li>
         </ul>
-        <p>4800 kr</p>
-        <p>3000 kr</p>
+        <p class="prices_pack_block_price prices_pack_block_price_4 prices_pack_block_price_4_old">4800 kr</p>
+        <p class="prices_pack_block_price prices_pack_block_price_4">3000 kr</p>
       </li>
     </ul>
 
